--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="css/popup.css">
     <meta charset="utf-8">
     <title>라이딩 로그 시각화</title>
 </head>
@@ -21,7 +21,7 @@ N_END_DRAW_SLEEP = 1000
 N_INIT_SLEEP_MS = 1000
 INITIAL_MAP_LEVEL = 11
 MOVE_MAP_LEVEL = 8
-ITEM_NAME = "2022-06-19_01-21-02"
+ITEM_NAME = "2022-06-18_11-02-22"
 
 
 
